--- a/app/src/main/res/layout/adapter_order_history_details_item.xml
+++ b/app/src/main/res/layout/adapter_order_history_details_item.xml
@@ -9,11 +9,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/order_details_number_bg"
-        android:text="2"
+        android:text=""
         android:textColor="@color/black"
         android:padding="@dimen/_5sdp"/>
 
     <TextView
+        android:id="@+id/tvIngredientName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/tvNumber"
@@ -21,7 +22,7 @@
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_7sdp"
         android:layout_marginEnd="@dimen/_20sdp"
-        android:text="Fresh Boneless Chicken Breast, 2.75-3.8 lb"
+        android:text=""
         android:textSize="@dimen/_13sdp"
         android:layout_centerVertical="true"
         android:textColor="@color/black"/>
@@ -30,7 +31,7 @@
         android:id="@+id/tvOrderPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$13.80"
+        android:text=""
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:textColor="@color/light_green"
