--- a/app/src/main/res/layout/fragment_christmas_collection.xml
+++ b/app/src/main/res/layout/fragment_christmas_collection.xml
@@ -42,6 +42,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="@dimen/_5sdp"
+            android:visibility="gone"
             android:layout_centerInParent="true"
             android:padding="@dimen/_5sdp"
             android:src="@drawable/three_dot_icon" />
