--- a/app/src/main/res/layout/fragment_subscription_plan_over_view.xml
+++ b/app/src/main/res/layout/fragment_subscription_plan_over_view.xml
@@ -422,8 +422,8 @@ reinvented version of your favorite meal."
 
             <ImageView
                 android:id="@+id/crossImages"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_15sdp"
+                android:layout_height="@dimen/_15sdp"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="@dimen/_15sdp"
                 android:visibility="invisible"
