--- a/app/src/main/res/layout/fragment_plan.xml
+++ b/app/src/main/res/layout/fragment_plan.xml
@@ -20,7 +20,7 @@
             android:layout_height="@dimen/_38sdp"
             android:src="@drawable/mask_group_icon"
             app:civ_border_color="@color/light_green"
-            app:civ_border_width="@dimen/_2sdp" />
+            app:civ_border_width="@dimen/_1sdp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -156,6 +156,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:overScrollMode="never"
+                    android:foregroundGravity="center"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginStart="@dimen/_5sdp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
